--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.10.2",
+    "react-bootstrap-sweetalert": "^4.4.1",
     "react-dom": "^16.10.2",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-viewer": "^2.11.1",
     "redux-saga": "^1.1.1"
   },
   "scripts": {
