--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-bootstrap-sweetalert": "^4.4.1",
     "react-dom": "^16.10.2",
@@ -23,6 +24,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:8000",
   "browserslist": {
     "production": [
       ">0.2%",
