--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-viewer": "^2.11.1",
-    "redux-saga": "^1.1.1"
+    "redux-saga": "^1.1.1",
+    "simple-react-validator": "^1.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
